force-app/main/default/objects/Conflict_of_Interest__c/Conflict_of_Interest__c.object-meta.xml
<CustomObject>
    <label>Conflict of Interest</label>
    <nameField>
        <displayFormat>COI-{0000000}</displayFormat>
        <label>Conflict of Interest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conflict of Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>