force-app/main/default/objects/Conflict_of_Interest__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will auto checked when &quot;start date is available but end date is blank&quot; OR &quot;Start date is past date and end date is future date&quot;.</description>
    <inlineHelpText>This will auto checked when &quot;start date is available but end date is blank&quot; OR &quot;Start date is past date and end date is future date&quot;.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>