force-app/main/default/objects/Conflict_of_Interest__c/fields/Auditor_Internal__c.field-meta.xml
<CustomField>
    <fullName>Auditor_Internal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>External Auditors is of type User in the system</inlineHelpText>
    <label>Auditor (Internal)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Conflict_of_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>