force-app/main/default/objects/Conflict_of_Interest__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Conflict of Interests</relationshipLabel>
    <relationshipName>Conflict_of_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>