force-app/main/default/objects/Conflict_of_Interest__c/fields/DescriptionofConflict__c.field-meta.xml
<CustomField>
    <fullName>DescriptionofConflict__c</fullName>
    <label>Description of Conflict</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>