force-app/main/default/objects/Conflict_of_Interest__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <formula>AND( 
     NOT( ISBLANK( Customer__c )),
     NOT( ISBLANK( Program__c)),
     OR( 
         AND( EndDate__c &gt;= TODAY() , StartDate__c  &lt;=  TODAY() ),
         AND( ISBLANK( EndDate__c), StartDate__c  &lt;=  TODAY())
     )
)</formula>
    <label>Is Active ?</label>
    <type>Checkbox</type>
</CustomField>