force-app/main/default/objects/Conflict_of_Interest__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Conflict of Interests</relationshipLabel>
    <relationshipName>Conflict_of_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>