force-app/main/default/objects/Conflict_of_Interest__c/fields/Type_of_Conflict__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Conflict__c</fullName>
    <description>Is it Full or Partial COI?</description>
    <inlineHelpText>Is it Full or Partial COI?</inlineHelpText>
    <label>Type of Conflict</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
                <default>true</default>
                <label>Full</label>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>