force-app/main/default/objects/Conflict_of_Interest__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <label>Unique Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>