force-app/main/default/objects/Conflict_of_Interest__c/validationRules/Auditor_Should_Not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Auditor_Should_Not_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( Auditor__c ) , ISBLANK( Auditor_Internal__c ) )</errorConditionFormula>
    <errorMessage>Internal or external auditor should not be blank</errorMessage>
</ValidationRule>