force-app/main/default/objects/Conflict_of_Interest__c/validationRules/Either_Internal_Or_External_Auditor.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_Internal_Or_External_Auditor</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Auditor__c )),NOT(ISBLANK( Auditor_Internal__c )))</errorConditionFormula>
    <errorMessage>Select only one internal or external auditor at a time.</errorMessage>
</ValidationRule>